z-index issue on mobile for nav bar
also changed background color

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1881,6 +1881,8 @@ nav {
     right: 0;
     top: 50px;
     text-align: right;
+    z-index: 100;
+    background-color:black;
   }
 }
 
@@ -1894,6 +1896,7 @@ nav a {
   text-transform: uppercase;
   color: rgba(255, 255, 255, 0.7);
   margin: 0 25px;
+
 }
 
 nav a:hover {
